--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Robert V Frazier, web dev</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./main.css" />
-    <script src="./main.js"></script>
-</head>
-<body>
-    
-</body>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Robert V Frazier, web developer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <script src="css/main.js"></script>
+  </head>
+
+  <body>
+    <div class="navigation"></div>
+  </body>
 </html>
