--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       href="https://fonts.googleapis.com/css?family=Squada+One:100,300,400,700,900"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -83,6 +86,7 @@
       href="/favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="/favicon/manifest.json" />
+    <link rel="stylesheet" href="css/style.css" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta
       name="msapplication-TileImage"
@@ -96,15 +100,17 @@
     <div class="navigation"></div>
 
     <header class="header">
-      <img
-        src="img/hero.png"
-        alt="photo of Robert Frazier"
-        class="header__hero"
-      />
+      <div class="header__hero-box">
+        <img
+          src="img/hero.png"
+          alt="photo of Robert Frazier"
+          class="header__hero-image"
+        />
 
-      <div class="heading-text">
-        <p>Making the world better</p>
-        <p>one web app at a time</p>
+        <div class="header__hero-tagline">
+          <span class="header__hero-tagline--one">Making the world better</span>
+          <span class="header__hero-tagline--two">one web app at a time</span>
+        </div>
       </div>
     </header>
   </body>
